<resources>
    <string name="app_name">CenecApp</string>
    <string name="nombreApp">O-MO</string>
    <string name="textoFoto">Elige tu Avatar de Usuario</string>
    <string name="appname">Nombre de la App</string>
    <string name="iniciarsesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre">Nombre de Usuario</string>
    <string name="email1">Email</string>
    <string name="email2">Confirma el email</string>
    <string name="ppassword">Introduce la contraseña</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="btnFin">Finalizar Registro</string>
    <string name="nombreAjustes">Nombre</string>
    <string name="ciudadAjustes">Ciudad</string>
    <string name="emailAjustes">Email</string>
    <string name="contraseñaAjustes">Contraseña</string>
    <string name="telefonoAjustes">Teléfono</string>
    <string name="cambiarFoto">Editar foto de perfil</string>
    <string name="obtenerPlus">Obtener versión Plus</string>
    <string name="juegosAlosQueJuegas">Estos son los juegos a los que juegas</string>
    <string name="juegosJuega">Juega a...</string>
    <string name="hintNombreusuario">Nombre de Usuario</string>
    <string name="hintEmailUsuario">Introduce tu email</string>
    <string name="hintPasswordUsuario">Contraseña</string>
    <string name="hintPasswordConfirm">Confirma tu contraseña</string>
    <string name="listajuegos">listaJuegos</string>
    <string name="afinidad">Afinidad:</string>
    <string name="editarusuario">Editar Usuario</string>
    <string name="obtener_premium">Obtener Premium</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="usuarios_bloqueados">Usuarios bloqueados</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="invitar_jugadores">Invitar jugadores</string>
    <string name="ayuda">Ayuda</string>
    <string name="faq">FAQ</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="editar_foto_de_perfil">Editar foto de perfil</string>
    <string name="introduceNombre">Introduce un nombre</string>
    <string name="introduceEmail">Introduce un email</string>
    <string name="introduceContraseña">Introduce una contraseña</string>
    <string name="contraseñaMayor8">La contraseña debe tener al menos 8 caractéres</string>
    <string name="terminosYCondiciones">He leído y acepto los términos y condiciones de uso</string>
    <string name="usuarioExistente">¿Usuario Existente? Inicia Sesión</string>
    <string name="debesAceptarTerminos">Debes aceptar los términos y condiciones de uso</string>
    <string name="descripcionUsuario">Los otros usuarios querrán saber de ti</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="completaBio">Completa tu biografia entre 30 y 150 caracteres</string>
    <string name="juegosIguales">No puede haber dos juegos iguales</string>
    <string name="juegoInvalido">Introduce un juego</string>
    <string name="fotoOk">Foto subida correctamente</string>
    <string name="fotoNoOk">Error al subir la foto</string>
    <string name="permisosDenegados">Permisos denegados</string>
    <string name="archivoOk">Archivo subido correctamente</string>
    <string name="emailNoValido">Email incorrecto</string>
    <string name="plataformaNoValida">Introduce una plataforma válida</string>
    <string name="ciudadNoValida">Introduce una ciudad válida</string>
    <string name="completaLosCampos">Introduce un email y contraseña</string>
    <string name="emailIncorrecto">El email es incorrecto</string>
    <string name="ajustesUsuario">Ajustes</string>
    <string name="elegir_idioma">Elegir idioma</string>
    <string name="guardaridioma">Guardar</string>
</resources>