<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fondoPantalla"
    android:padding="15dp"
    tools:context=".ActividadAjustesPropios">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ajustesUsuario"
            android:textColor="@color/verdeRecluciente"
            android:textSize="30sp"
            android:textStyle="bold"></TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white"></View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ajusteperfilusuario">
            </ImageView>
            <TextView
                android:id="@+id/editarUsuario"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/editarusuario">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ajusteidiomas">
            </ImageView>
            <TextView
                android:id="@+id/editarIdioma"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"
                android:text="@string/elegir_idioma">
            </TextView>
            <Spinner
                android:id="@+id/campoIdioma"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:textAlignment="center">
            </Spinner>
            <TextView
                android:id="@+id/aplicarIdioma"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/guardaridioma"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/verdeRecluciente">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ajustepremiun">
            </ImageView>
            <TextView
                android:id="@+id/obtenerPremium"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"
                android:text="@string/obtener_premium">
            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ajustecontrasena">
            </ImageView>

            <TextView
                android:id="@+id/cambiarPassword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/cambiar_contrase_a"
                android:textAlignment="center"
                android:textColor="@color/white"></TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ajusteusuariosbloqueados">
            </ImageView>
            <TextView
                android:id="@+id/usuariosBloqueados"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"
                android:text="@string/usuarios_bloqueados">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ajusteshare">
            </ImageView>
            <TextView
                android:id="@+id/compartirShare"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"
                android:text="@string/invitar_jugadores">
            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ajusteshelp">
            </ImageView>
            <TextView
                android:id="@+id/ayuda"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"
                android:text="@string/ayuda">
            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ajustesfaq">
            </ImageView>
            <TextView
                android:id="@+id/faq"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/faq">
            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ajustecerrarsesion">
            </ImageView>
            <TextView
                android:id="@+id/cerrarSesion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"
                android:text="@string/cerrar_sesi_n">
            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ajusteseliminarcuenta">
            </ImageView>
            <TextView
                android:id="@+id/eliminarCuenta"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"
                android:text="@string/eliminar_cuenta">
            </TextView>

        </LinearLayout>
    </LinearLayout>
</ScrollView>


</LinearLayout>