<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegActivity"
    android:background="@color/fondoPantalla">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">
                <ImageView
                    android:id="@+id/iconUsuario"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/vectoraccount" />

                <EditText
                    android:id="@+id/nombreUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:background="@drawable/edittext"
                    android:hint="@string/hintNombreusuario"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gris"
                    android:inputType="textPersonName" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">
                <ImageView
                    android:id="@+id/iconEmail"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/vectoremail"/>

                <EditText
                    android:id="@+id/campoEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edittext"
                    android:ems="10"
                    android:hint="@string/hintEmailUsuario"
                    android:inputType="textEmailAddress"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gris" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">
                <ImageView
                    android:id="@+id/iconLlave"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/vectorpassword" />

                <EditText
                    android:id="@+id/campoPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:background="@drawable/edittext"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textColorHint="@color/gris"
                    android:hint="@string/hintPasswordUsuario"
                    android:inputType="textPassword" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">
                <ImageView
                    android:id="@+id/iconLlave2"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/vectorpassword" />

                <EditText
                    android:id="@+id/campoPassword2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:background="@drawable/edittext"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textColorHint="@color/gris"
                    android:hint="Confirmar contraseña"
                    android:inputType="textPassword" />

            </LinearLayout>

            <TextView
                android:id="@+id/existe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/usuarioExistente"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/boxTerminos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/leerTerminos"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textStyle="italic"
                    android:text="@string/terminosYCondiciones">
                </TextView>
            </LinearLayout>


            <ProgressBar
                android:id="@+id/pBar"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="25"
                android:progressTint="@color/verdeRecluciente"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal">
            </ProgressBar>
            <TextView
                android:id="@+id/btnSiguiente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSiguiente"
                android:textColor="@color/verdeRecluciente"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textSize="20sp">

            </TextView>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>